--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
   },
   "devDependencies": {
     "@types/katex": "0.11.0",
-    "@types/node": "14.14.31",
+    "@types/node": "^22.15.26",
     "@types/react": "17.0.2",
     "lint-staged": "10.5.4",
     "pre-commit": "1.2.2",
     "prettier": "2.2.1",
-    "typescript": "^4.4.4"
+    "typescript": "^5.8.3"
   }
 }
